tests/lean/param.lean.expected.out
param.lean:16:28: error: invalid declaration, ambiguous parameter declaration, (solution: put parentheses around parameters)
